--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -13,4 +13,5 @@ steps:
       git checkout@1:
         sh: 'git checkout https://github.com/SrujanRajDev/test-git-project.git'
       git checout@2:
-        sh: 'git checkout '
+        sh: 'git checkout https://github.com/SrujanRajDev/Dev-github.git'
+    maxParallel: 2
