--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -7,9 +7,8 @@ steps:
   displayName: Checkout code
 #  trigger:
 #  - master
-  
-  strategy:
-    matrix:
+#  strategy:
+#    matrix:
       git checkout@1:
         sh: 'git checkout https://github.com/SrujanRajDev/test-git-project.git'
       git checout@2:
